# kadirail-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.md  app.py  huggingface.yml  landing.html  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: main.py
core/: __init__.py  bias_engine.py  document_validator.py  map_engine.py  scanner.py  simulator.py
data/: mock_generator.py
utils/: __init__.py  auth.py  case_law_search.py  document_summarizer.py  mermaid_gen.py  pii_masking.py  thai_nlp.py
